--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5888,7 +5888,7 @@ blockquote:before {
   color: var(--color-primary);
   font-weight: 600;
   font-size: 13px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .dlab-post-meta ul li strong {
@@ -9264,7 +9264,7 @@ a,
 }
 
 .site-button-link.youtube {
-  color: #ce201f;
+  color: #e21100;
 }
 
 .site-button-link.whatsapp {
@@ -9314,7 +9314,7 @@ a,
 .site-button-link.youtube.hover:hover,
 .site-button-link.youtube.hover:focus,
 .site-button-link.youtube.hover:active {
-  color: #ce201f;
+  color: #e21100;
 }
 
 .site-button-link.whatsapp.hover:hover,
@@ -9374,7 +9374,7 @@ a,
 }
 
 .site-button.youtube {
-  background-color: #ce201f;
+  background-color: #e21100;
 }
 
 .site-button.youtube:hover,
@@ -9426,7 +9426,7 @@ a,
 }
 
 .site-button.youtube.outline {
-  color: #ce201f;
+  color: #e21100;
 }
 
 .site-button.whatsapp.outline {
@@ -16606,19 +16606,19 @@ ol.commentlist li .star-rating {
 
 .theme-btn.bt-buy-now {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1fdf61+0,88BA46+100 */
-  background: #cd4032;
+  background: #e21100;
   /* Old browsers */
   background: -moz-linear-gradient(top,
-      #c72d1d 0%,
-      #cd4032 100%);
+      #e21100 0%,
+      #e21100 100%);
   /* FF3.6-15 */
   background: -webkit-linear-gradient(top,
-      #c72d1d 0%,
-      #cd4032 100%);
+      #e21100 0%,
+      #e21100 100%);
   /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,
-      #c72d1d 0%,
-      #cd4032 100%);
+      #e21100 0%,
+      #e21100 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1fdf61', endColorstr='#88BA46', GradientType=0);
   /* IE6-9 */
@@ -18163,10 +18163,10 @@ color: #ffff;
 .main-timeline5 .timeline-icon,.main-timeline5 .year{margin:auto;position:absolute;top:0;left:0;bottom:0;right:0}
 .main-timeline5 .timeline:after,.main-timeline5 .timeline:before{content:"";display:block;width:100%;clear:both}
 .main-timeline5 .timeline:before{content:"";width:100%;height:100%; position:absolute;top:0;right:0;z-index:2}
-.main-timeline5 .timeline-icon{width:210px;height:210px;border-radius:50%;border:25px solid transparent;border-top-color:#c21807;border-right-color:#c21807;z-index:1;transform:rotate(45deg)}
-.main-timeline5 .year{display:block;width:110px;height:110px;line-height:110px;border-radius:50%;background:#fff;box-shadow:0 0 20px rgba(0,0,0,.4);font-size:30px;font-weight:700;color:#c21807;text-align:center;transform:rotate(-45deg)}
-.main-timeline5 .timeline-content{width:35%;float:right;background:#c21807;padding:30px 20px;margin:50px 0;z-index:1;position:relative}
-.main-timeline5 .timeline-content:before{content:"";width:20%;height:15px;background:#c21807;position:absolute;top:50%;left:-20%;z-index:-1;transform:translateY(-50%)}
+.main-timeline5 .timeline-icon{width:210px;height:210px;border-radius:50%;border:25px solid transparent;border-top-color:#e21100;border-right-color:#e21100;z-index:1;transform:rotate(45deg)}
+.main-timeline5 .year{display:block;width:110px;height:110px;line-height:110px;border-radius:50%;background:#fff;box-shadow:0 0 20px rgba(0,0,0,.4);font-size:30px;font-weight:700;color:#e21100;text-align:center;transform:rotate(-45deg)}
+.main-timeline5 .timeline-content{width:35%;float:right;background:#e21100;padding:30px 20px;margin:50px 0;z-index:1;position:relative}
+.main-timeline5 .timeline-content:before{content:"";width:20%;height:15px;background:#e21100;position:absolute;top:50%;left:-20%;z-index:-1;transform:translateY(-50%)}
 .main-timeline5 .title{font-size:20px;font-weight:700;color:#fff;margin:0 0 10px}
 .main-timeline5 .description{font-size:16px;color:#fff;line-height:24px;margin:0}
 /*.main-timeline5 .timeline:nth-child(2n):before{box-shadow:8px 0 5px -5px rgba(0,0,0,.5) inset}*/
@@ -18205,10 +18205,10 @@ color: #ffff;
 .main-timeline5 .timeline-icon,.main-timeline5 .year{margin:auto;position:absolute;top:0;left:0;bottom:0;right:0}
 .main-timeline5 .timeline:after,.main-timeline5 .timeline:before{content:"";display:block;width:100%;clear:both}
 .main-timeline5 .timeline:before{content:"";width:100%;height:100%;box-shadow:-8px 0 5px -5px rgba(0,0,0,.5) inset;position:absolute;top:0;right:0;z-index:2}
-.main-timeline5 .timeline-icon{width:210px;height:210px;border-radius:50%;border:25px solid transparent;border-top-color:#c21807;border-right-color:#c21807;z-index:1;transform:rotate(45deg)}
-.main-timeline5 .year{display:block;width:110px;height:110px;line-height:110px;border-radius:50%;background:#fff;box-shadow:0 0 20px rgba(0,0,0,.4);font-size:30px;font-weight:700;color:#c21807;text-align:center;transform:rotate(-45deg)}
-.main-timeline5 .timeline-content{width:35%;float:right;background:#c21807;padding:30px 20px;margin:50px 0;z-index:1;position:relative}
-.main-timeline5 .timeline-content:before{content:"";width:20%;height:15px;background:#c21807;position:absolute;top:50%;left:-20%;z-index:-1;transform:translateY(-50%)}
+.main-timeline5 .timeline-icon{width:210px;height:210px;border-radius:50%;border:25px solid transparent;border-top-color:#e21100;border-right-color:#e21100;z-index:1;transform:rotate(45deg)}
+.main-timeline5 .year{display:block;width:110px;height:110px;line-height:110px;border-radius:50%;background:#fff;box-shadow:0 0 20px rgba(0,0,0,.4);font-size:30px;font-weight:700;color:#e21100;text-align:center;transform:rotate(-45deg)}
+.main-timeline5 .timeline-content{width:35%;float:right;background:#e21100;padding:30px 20px;margin:50px 0;z-index:1;position:relative}
+.main-timeline5 .timeline-content:before{content:"";width:20%;height:15px;background:#e21100;position:absolute;top:50%;left:-20%;z-index:-1;transform:translateY(-50%)}
 .main-timeline5 .title{font-size:20px;font-weight:700;color:#fff;margin:0 0 10px}
 .main-timeline5 .description{font-size:16px;color:#fff;line-height:24px;margin:0}
 .main-timeline5 .timeline:nth-child(2n):before{box-shadow:8px 0 5px -5px rgba(0,0,0,.5) inset}
@@ -18298,4 +18298,10 @@ color: #ffff;
 .HomeService .list-arrow li:before{
   top: 10px;
   color: white;
+}
+.HomeService .list-arrow li{
+  font-size: 15px !important;
+}
+.HomeService .project-content .btn a{
+  font-size: 15px !important;
 }
