--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -5249,7 +5249,7 @@ HOME 5 Box Header
 }
 
 .btn.youtube.outline {
-  color: #ce201f;
+  color: #e21100;
 }
 
 .h100 {
@@ -8261,7 +8261,7 @@ button.scroltop {
   position: absolute;
   width: 207px;
   height: 3px;
-  background-color: var(--color-primary);
+  background-color:#e21100;
   left: 0;
   bottom: -25px;
 }
