--- a/public/css/plugins.css
+++ b/public/css/plugins.css
@@ -28,7 +28,7 @@
 
     font-family: 'Roboto', sans-serif;
 
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Euclid Circular', sans-serif;
 
     font-family: 'Open Sans', sans-serif;
 
