--- a/public/plugins/revolution/revolution/css/layers.css
+++ b/public/plugins/revolution/revolution/css/layers.css
@@ -3119,7 +3119,7 @@ website:   	http://www.themepunch.com
         line-height: 70px;
         font-weight: 700;
         font-style: normal;
-        font-family: "Roboto Condensed";
+        font-family: "Euclid Circular";
         padding: 0px 0px 10px 0px;
         text-decoration: none;
         text-align: left;
@@ -3154,7 +3154,7 @@ website:   	http://www.themepunch.com
         line-height: 30px;
         font-weight: 400;
         font-style: normal;
-        font-family: "Roboto Condensed";
+        font-family: "Euclid Circular";
         padding: 0px 0px 0px 0px;
         text-decoration: none;
         text-align: center;
@@ -3246,7 +3246,7 @@ website:   	http://www.themepunch.com
         line-height: 70px;
         font-weight: 700;
         font-style: normal;
-        font-family: "Roboto Condensed";
+        font-family: "Euclid Circular";
         padding: 0px 0px 10px 0px;
         text-decoration: none;
         text-align: center;
@@ -3293,7 +3293,7 @@ website:   	http://www.themepunch.com
         line-height: 30px;
         font-weight: 400;
         font-style: normal;
-        font-family: "Roboto Condensed";
+        font-family: "Euclid Circular";
         padding: 0px 0px 0px 0px;
         text-decoration: none;
         text-align: center;
@@ -3310,7 +3310,7 @@ website:   	http://www.themepunch.com
         line-height: 15px;
         font-weight: 400;
         font-style: normal;
-        font-family: "Roboto Condensed";
+        font-family: "Euclid Circular";
         padding: 0px 0px 0px 0px;
         text-decoration: none;
         text-align: center;
