--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -455,7 +455,7 @@ h6 {
 
 .dz_error-405 .dz_error {
   color: #dfdfdf;
-  font-family: poppins;
+  font-family: Euclid Circular;
   font-size: 200px;
   font-weight: 700;
   line-height: 200px;
@@ -1158,7 +1158,7 @@ h6 {
   width: auto;
   padding: 5px;
   background-color: var(--color-primary);
-  font-family: "Poppins", sans-serif;
+  font-family: "Euclid Circular", sans-serif;
 }
 
 .date-style-2 .post-date>strong:after {
@@ -3122,7 +3122,7 @@ HOME 5 Box Header
 }
 
 .amazing-pg .exhibition-carousel .owl-dot.active {
-  background: #c83020 !important;
+  background: #e21100 !important;
 }
 
 .exhibition-bx .title {
@@ -3663,7 +3663,7 @@ HOME 5 Box Header
 }
 
 .frame-box p {
-  font-family: "Poppins", sans-serif;
+  font-family: "Euclid Circular", sans-serif;
 }
 
 .frame-box .area-frame .container {
@@ -4678,7 +4678,7 @@ HOME 5 Box Header
   font-size: 50px;
   font-weight: 600;
   line-height: 60px;
-  font-family: poppins;
+  font-family: Euclid Circular;
   color: #000;
 }
 
@@ -4770,7 +4770,7 @@ HOME 5 Box Header
   top: 5px;
   left: 0;
   transition: all 0.5s;
-  font-family: "Poppins", sans-serif;
+  font-family: "Euclid Circular", sans-serif;
   text-transform: capitalize;
 }
 
@@ -6964,7 +6964,7 @@ HOME 5 Box Header
 .call-action.style2 h2.title {
   font-size: 36px;
   line-height: 46px;
-  font-family: poppins;
+  font-family: Euclid Circular;
   font-weight: 700;
   letter-spacing: 1px;
   margin-bottom: 15px;
@@ -6977,7 +6977,7 @@ HOME 5 Box Header
 .call-action.style2 h3 {
   font-size: 26px;
   font-weight: 600;
-  font-family: poppins;
+  font-family: Euclid Circular;
   line-height: 36px;
   margin-bottom: 15px;
 }
@@ -8017,7 +8017,7 @@ button.scroltop {
 .dz-industry-zone {
   padding-top: 84px;
   padding-bottom: 84px;
-  font-family: poppins;
+  font-family: Euclid Circular;
   width: 100%;
   background-color: #1a43bfd5;
   position: relative;
