--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -2,7 +2,7 @@
 .slider-content .inner h1 {
   border-width: 0;
   color: #fff;
-  font-family: Poppins, sans-serif;
+  font-family: Euclid Circular, sans-serif;
   font-size: 60px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -144,7 +144,7 @@
   font-size: 50px;
   line-height: 60px;
   font-weight: 700;
-  font-family: "Poppins", sans-serif;
+  font-family: "Euclid Circular", sans-serif;
   border-width: 0px;
   text-align: left;
   margin: 0px;
@@ -829,7 +829,7 @@
 .hero-section .description.style2 {
   font-size: 13px;
   line-height: 21px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Euclid Circular", sans-serif;
   text-align: left;
   width: 380px;
 }
