--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -2,7 +2,7 @@
 .slider-content .inner h1 {
   border-width: 0;
   color: #fff;
-  font-family: Euclid Circular, sans-serif;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   font-size: 60px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -90,7 +90,7 @@
 .slider-content .sliderStyle2 button {
   background: transparent;
   border: 1px solid hsla(0, 0%, 100%, 0.25);
-  font-family: Raleway;
+  font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   font-size: 14px;
   padding: 11px 60px;
 }
@@ -144,7 +144,7 @@
   font-size: 50px;
   line-height: 60px;
   font-weight: 700;
-  font-family: "Euclid Circular", sans-serif;
+  font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   border-width: 0px;
   text-align: left;
   margin: 0px;
@@ -451,7 +451,7 @@
 
 /* sliderStyle5 */
 .slider-content .inner.sliderStyle5 h1 {
-  font-family: "Roboto Condensed", sans-serif;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   text-align: center;
   line-height: 53px;
   letter-spacing: 0px;
@@ -461,7 +461,7 @@
 }
 
 .slider-content .inner.sliderStyle5 .subTitle1 {
-  font-family: "Roboto Condensed", sans-serif;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   text-align: center;
   margin: 0px;
   letter-spacing: 1px;
@@ -712,7 +712,7 @@
 }
 
 .slider-content .inner.sliderStyle10 h1 {
-  font-family: "Roboto Condensed", sans-serif;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   line-height: 61px;
   font-weight: 400;
   font-size: 61px;
@@ -721,7 +721,7 @@
 }
 
 .slider-content .inner.sliderStyle10 button {
-  font-family: "Roboto Condensed", sans-serif;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   line-height: 13px;
   padding: 15px 50px;
   letter-spacing: 2px;
@@ -733,7 +733,7 @@
 }
 
 .slider-content .inner.sliderStyle10 .subTitle1 {
-  font-family: "Roboto Condensed", sans-serif;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   line-height: 12px;
   letter-spacing: 1px;
   font-weight: 400;
@@ -812,7 +812,7 @@
   font-weight: 700;
   color: rgb(255, 255, 255);
   letter-spacing: 1px;
-  font-family: Roboto;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   text-transform: uppercase;
   border-bottom: 1px solid rgb(246, 115, 46);
   display: inline-block;
@@ -829,7 +829,7 @@
 .hero-section .description.style2 {
   font-size: 13px;
   line-height: 21px;
-  font-family: "Euclid Circular", sans-serif;
+  font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   text-align: left;
   width: 380px;
 }
@@ -938,7 +938,7 @@
   font-size: 18px;
   line-height: 16px;
   font-weight: 400;
-  font-family: Open Sans;
+  font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   margin: 30px 0;
 }
 
@@ -947,7 +947,7 @@
   border-radius: 0;
   text-transform: uppercase;
   font-size: 13px;
-  font-family: roboto;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
   padding: 0 30px;
   margin: 0;
 }
@@ -1062,7 +1062,7 @@
 
 /* home-slider-13 */
 .hero-section.home-slider-13 .big-text {
-  font-family: "Roboto Condensed", sans-serif;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
 }
 
 @media only screen and (max-width: 991px) {
@@ -1159,7 +1159,7 @@
 /* home-slider-15 */
 .hero-section.home-slider-15 .subtitle.style2 {
   font-weight: 600;
-  font-family: Roboto;
+   font-family: 'Metropolis', Arial, Helvetica, sans-serif !important;
 }
 
 .hero-section.home-slider-15 .title {
