--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18906,3 +18906,18 @@ input[type="radio"]+label:hover:before {
     right: 100px; /* Return to initial position */
   }
 }
+
+@keyframes moveImage3 {
+  0% {
+    bottom: 10px;
+    right: 100px;
+  }
+  50% {
+    bottom: 100px; 
+    right: 200px; 
+  }
+  100% {
+    bottom: 10px;
+    right: 100px; 
+  }
+}
