--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,6 +202,13 @@ a.text-red:hover {
 a.text-redblk:hover {
   color: #e21100 !important;
 }
+.text-white {
+  color: #fff !important;
+}
+
+a.text-white:hover {
+  color: #fff !important;
+}
 section,
 article,
 aside,
@@ -18137,7 +18144,7 @@ input[type="radio"]+label:hover:before {
 }
 
 .career-ban {
-  background-image: url(/images/Life-at-Zing/banner.jpg) !important;
+  background-image: url(/images/bg-header.jpg) !important;
 }
 
 .zing-academy {
