--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18959,6 +18959,49 @@ input[type="radio"]+label:hover:before {
   }
 }
 
+@media (max-width:500px){
+  .HomeService {
+    position: relative;
+    top: -50px;
+  }
+  .HomeService .section-head{
+    padding-top: 30px;
+  }
+  .homeAcademy{
+    top: -50px;
+  }
+  .homeAcademy .section-head{
+    padding-top: 20px;
+  }
+}
+
+.zingFluence .content-sec{
+  padding-left: 40px;
+}
+
+@media only screen and (max-width: 591px){
+  .pr-service-hero .content-inner{
+    padding: 30px 20px;
+  }
+  .zingFluence .content-sec{
+    padding-left: 0px;
+  }
+}
+
+@media (max-width:990px){
+  .BrandCaseStudy .dlab-post-media {
+  
+    height: 100%;
+    width: 10%;
+  
+  }
+  .BrandCaseStudy .dlab-post-media img{
+   
+    height: 300px;
+    width: 100%;
+    object-fit: cover;
+  }
+}
 
 
 /* .homeAbout */
