--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19009,6 +19009,20 @@ input[type="radio"]+label:hover:before {
     object-fit: cover;
   }
 }
+.letsInfluence .row.sp20 {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.letsinflu {
+  display: flex;
+}
+
+.letsinflu .icon-bx-wraper {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+}
 
 /* .homeAbout */
