whatsapp-icon color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16607,7 +16607,7 @@ ol.commentlist li .star-rating {
 
 .theme-btn.bt-support-now {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1ebbf0+8,39dfaa+100 */
-  background: #1A43BF !important;
+  background: #075E54 !important;
   /* Old browsers */
   background: -moz-linear-gradient(45deg,
       #1ebbf0 8%,
