--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -3223,7 +3223,7 @@ HOME 5 Box Header
 
 .sr-iconbox1 {
   padding: 50px 30px;
-  background: #fff;
+  /* background: #fff; */
   text-align: center;
   border-radius: 4px;
 }
