--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2883,7 +2883,7 @@ input[type="radio"]:checked+label:before {
 /*simple rating list*/
 
 .rating-bx {
-  color: #ffc300;
+  color: #fb940f;
   font-size: 14px;
 }
 
@@ -10885,7 +10885,7 @@ ul[class*="list-"] {
 }
 
 .ow-post-tags {
-  border-top: 1px solid #e9e9e9;
+  border-top: 1px solid #1a43bf;
   padding-top: 10px;
 }
 
@@ -18887,7 +18887,7 @@ input[type="radio"]+label:hover:before {
 }
 
 .ow-post-readmore h4 {
-  color: #e21100;
+  color: #000;
 }
 
 .HomeService .list-arrow li {
