--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -8696,7 +8696,7 @@ button.scroltop {
   gap: 14px;
   width: 35%;
   color: #313131;
-  border-bottom: 1px solid #313131;
+  /* border-bottom: 1px solid #313131; */
   padding: 20px;
 }
 
