--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9874,6 +9874,9 @@ a,
   font-size: 15px;
   /* color: #777; */
 }
+.list-hand-point li:before{
+  top: 5px;
+}
 .list-circle li:before{
   top: 20px !important;
   fill:#000
