--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19114,3 +19114,54 @@ input[type="radio"]+label:hover:before {
   background: #fff;
   border: none;
 }
+
+
+
+.newsletter-box {
+  background-color: #e21100;
+  /* border-radius: 15px; */
+  /* padding: 40px; */
+  max-width: 100%;
+  position: relative;
+}
+
+.newsletter-box h6 {
+  font-size: 14px;
+}
+
+.newsletter-container input, .newsletter-container span, .newsletter-container select, .newsletter-container textarea{
+  background-color: transparent;
+  color: white;
+}
+.newsletter-container option {
+  color: black;
+  background-color: transparent;
+}
+.newsletter-container input::placeholder{
+  color: white;
+}
+
+.newsletter-container textarea::placeholder{
+  color: white;
+}
+.newsletter-container textarea:focus{
+  background-color: transparent;
+}
+.newsletter-container input:focus{
+  background-color: transparent;
+}
+
+.input-group .form-control {
+  border-radius: 30px 0 0 30px;
+  padding: 10px;
+}
+
+
+.input-group .btn {
+  border-radius: 0 30px 30px 0;
+  /* background-color: #ff4081; */
+  border: none;
+  color: white;
+}
+
+
