--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18159,6 +18159,8 @@ input[type="radio"]+label:hover:before {
   .zingFluence .choose-Zf-img {
     height: 500px !important;
     object-fit: cover;
+    object-position: top;
+    width: 100%;
   }
 
   .zingFluence .dz-banner-btn {
@@ -19164,4 +19166,20 @@ input[type="radio"]+label:hover:before {
   color: white;
 }
 
+@media (max-width:778px){
+  .newsletter-container img {
+    top: 24px;
+  }
+}
 
+@media (max-width:500px){
+  .footer-img{
+    display: flex;
+    justify-content: center;
+  }
+  .footer-img img{
+    height: 200px !important;
+    object-fit: contain;
+    align-items: center;
+  }
+}
