--- a/public/custom.scss
+++ b/public/custom.scss
@@ -51,7 +51,7 @@
     line-height: 30px;
     font-weight: 500;
     color: rgb(255, 255, 255);
-    font-family: Euclid Circular;
+    font-family: Metropolis;
     visibility: inherit;
     transition: none;
     text-align: inherit;
@@ -74,7 +74,7 @@
     line-height: 100px;
     font-weight: 700;
     color: rgb(255, 255, 255);
-    font-family: Euclid Circular;
+    font-family: Metropolis;
     letter-spacing: -5px;
     visibility: inherit;
     transition: none;
@@ -96,7 +96,7 @@
     line-height: 100px;
     font-weight: 300;
     color: rgb(255, 255, 255);
-    font-family: Euclid Circular;
+    font-family: Metropolis;
     letter-spacing: -5px;
     visibility: inherit;
     transition: none;
@@ -135,7 +135,7 @@
         line-height: 25px;
         font-weight: 600;
         color: rgb(255, 255, 255);
-        font-family: Euclid Circular;
+        font-family: Metropolis;
         visibility: inherit;
         transition: none;
         text-align: center;
@@ -160,7 +160,7 @@
         line-height: 200px;
         font-weight: 600;
         color: rgb(255, 126, 20);
-        font-family: Euclid Circular;
+        font-family: Metropolis;
         letter-spacing: -5px;
         visibility: inherit;
         transition: none;
